<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyc.c4q.intentsreview.RegisterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp">

        <TextView
            android:id="@+id/signIn_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_register"/>

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/register_username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:inputType="textWebEmailAddress"/>

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/register_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textWebPassword"/>

        <TextView
            android:id="@+id/confirm_password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/confirm_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_password"
            android:inputType="textWebPassword"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"/>

    </LinearLayout>

</LinearLayout>


