<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyc.c4q.intentsreview.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/signIn_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_in" />

    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/username_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"/>



    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_email_address"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="36dp" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textWebPassword" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="200dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="302dp">


        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_yet_registered" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_register"
            android:textSize="10sp"
            tools:ignore="SmallSp" />


    </LinearLayout>




</android.support.constraint.ConstraintLayout>
